--- a/youyangpin/index.html
+++ b/youyangpin/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="./favicon.ico">  
+    <link rel="shortcut icon" href="favicon.ico">  
     <title>优样品</title>
   <link href="/dist/style.css" rel="stylesheet"></head>
   <body>
